--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "heroku-postbuild": "nuxt build examples/demo",
     "start": "nuxt start examples/demo",
     "dev": "nuxt examples/demo",
+    "postinstall": "cd examples/with-typescript && npm install",
+    "dev:ts": "cd examples/with-typescript && npm run dev",
     "lint": "eslint lib test",
     "lint-fix": "eslint --fix lib test",
     "test": "npm run lint && jest",
@@ -36,7 +38,7 @@
   ],
   "files": [
     "lib",
-    "types/index.d.ts"
+    "types"
   ],
   "jest": {
     "testEnvironment": "node",
@@ -73,7 +75,7 @@
     "jest": "^24.9.0",
     "jsdom": "^15.1.1",
     "nuxt-class-component": "^1.3.0",
-    "nuxt-edge": "^2.10.0-26144655.e9c4bcfe",
+    "nuxt-edge": "^2.10.3-26236810.6cc962fa",
     "puppeteer": "^1.20.0",
     "standard-version": "^7.0.0"
   }
